# tenor

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  NOTICE  README.md  STABILITY.md  TENOR.md  appendix-limitations-audit.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.9-REQUIREMENTS.md  v0.9-ROADMAP.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
builder/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
builder/src/: App.tsx  index.css
conformance/: KNOWN_LIMITATIONS.md  known-limitations.md
conformance/ambiguity/: escrow_compliance_required.facts.json  escrow_compliance_required.verdicts.json  escrow_refund_approved.facts.json  escrow_refund_approved.verdicts.json  escrow_release_approved.facts.json  escrow_release_approved.verdicts.json  mul_valid_not_satisfied.facts.json  mul_valid_not_satisfied.verdicts.json  mul_valid_satisfied.verdicts.json  rule_basic_all_satisfied.facts.json  rule_basic_all_satisfied.verdicts.json  rule_basic_none.facts.json  rule_basic_partial.facts.json  rule_basic_partial.verdicts.json
conformance/analysis/: authority_basic.tenor  dead_states.tenor  flow_branching.tenor  system_authority.tenor  system_flow_trigger.tenor
conformance/cross_file/: README.md  bundle.expected.json  facts.tenor  rules.tenor
conformance/manifest/: manifest_basic.expected-manifest.json  manifest_basic.tenor
conformance/numeric/: decimal_default_exact.expected.json  decimal_default_exact.tenor  decimal_default_rounding.expected.json  decimal_default_rounding.tenor  decimal_default_rounding_up.expected.json  decimal_default_rounding_up.tenor  decimal_large_precise.expected.json  decimal_negative.tenor  (+12 more)
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  builder.rs  diff.rs  explain.rs  main.rs  manifest.rs  migrate.rs  runner.rs  serve.rs  tap.rs
crates/cli/src/ambiguity/: api.rs  compare.rs  fixtures.rs  mod.rs  prompt.rs  report.rs
crates/cli/src/commands/: ambiguity.rs  check.rs  diff.rs  elaborate.rs  eval.rs  explain.rs  generate.rs  mod.rs  test.rs  validate.rs
crates/cli/src/connect/: generate.rs  heuristic_provider.rs  introspect.rs  llm_provider.rs  matching.rs  mod.rs  provider.rs  workflow.rs
crates/cli/src/connect/introspect/: graphql.rs  mod.rs  openapi.rs  sql.rs
crates/cli/src/serve/: handlers.rs  inspect.rs  middleware.rs  mod.rs  simulate.rs  state.rs
crates/cli/src/template/: deploy.rs  deploy_config.rs  install.rs  manifest.rs  mod.rs  pack.rs  publish.rs  registry.rs  search.rs
crates/cli/src/trust/: keygen.rs  mod.rs  sign.rs  sign_wasm.rs  verify.rs  verify_wasm.rs
crates/cli/src/ui/: api_client.rs  components.rs  generate.rs  hooks.rs  mod.rs  templates.rs  theme.rs  types_gen.rs
crates/cli/src/ui/components/: action_space.rs  dashboard.rs  entity.rs  fact_input.rs  flow.rs  mod.rs  provenance.rs
crates/cli/tests/: cli_integration.rs  connect_e2e.rs  serve_integration.rs  template_deploy_e2e.rs  template_pack_e2e.rs  template_registry_e2e.rs  trust_e2e.rs  ui_generation.rs
crates/cli/tests/fixtures/: eval_basic.expected_verdicts.json  eval_basic.tenor  eval_basic_bundle.json
crates/eval/: Cargo.toml
crates/eval/src/: action_space.rs  assemble.rs  fact_provider.rs  flow.rs  lib.rs  numeric.rs  operation.rs  policy.rs  predicate.rs  provenance.rs  rules.rs  types.rs
crates/eval/src/adapter/: database.rs  http.rs  manual.rs  mod.rs  static_adapter.rs
crates/eval/src/flow/: mod.rs  tests.rs
crates/eval/src/migration/: analysis.rs  classify.rs  compatibility.rs  diff.rs  error.rs  executor.rs  mod.rs  plan.rs
crates/eval/src/policy/: basic.rs  composite.rs  human.rs  llm.rs  mod.rs
crates/eval/src/types/: contract.rs  fact.rs  mod.rs  values.rs
crates/eval/tests/: conformance.rs  multi_instance.rs  numeric_regression.rs
crates/executor-conformance/: Cargo.toml
crates/executor-conformance/src/: fixtures.rs  lib.rs  suite.rs  traits.rs
crates/executor-conformance/src/tests/: e01_fact_source.rs  e02_transition_validation.rs  e03_atomicity.rs  e04_snapshot_isolation.rs  e05_subflow_snapshot.rs  e06_datetime_utc.rs  e07_numeric_model.rs  e08_branch_isolation.rs  e09_join_completion.rs  e10_manifest_endpoint.rs  e11_manifest_bundle.rs  e12_etag_stability.rs  e13_dry_run.rs  e14_capability_advertisement.rs  e15_instance_creation.rs  e16_instance_identity.rs  e17_instance_enumeration.rs  e18_artifact_integrity.rs  e19_provenance_authenticity.rs  e20_trust_domain.rs  mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: agent_capabilities.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  navigation.rs  semantic_tokens.rs  server.rs
crates/lsp/tests/: lsp_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  record.rs  traits.rs
crates/storage/src/conformance/: commit.rs  concurrent.rs  error.rs  init.rs  mod.rs  provenance.rs  snapshot.rs  version.rs
crates/tenor-eval-wasm/: Cargo.toml
crates/tenor-eval-wasm/src/: inspect.rs  lib.rs
crates/tenor-eval-wasm/tests/: wasm.rs
docs/: METHODOLOGY.md  SYSTEM-REFERENCE.md  TENOR.md  agent-orientation.md  author-guide.md  index.md  interchange-schema.json  manifest-schema.json  minimal-kernel.md  policies.md  system-contract-coordinator.md  system-reference.md  tenor-language-specification.md  what-is-tenor.md
elaborator/: Cargo.toml  FIXPLAN.md
schema/: manifest-schema.json  tenor-interchange-v1.0.json
sdks/go/wasm-bridge/: Cargo.toml
sdks/go/wasm-bridge/src/: lib.rs
sdks/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
sdks/python/python/tenor/: __init__.py  types.py
sdks/python/src/: evaluator.rs  lib.rs  types.rs
sdks/python/tests/: test_evaluator.py
(+802 files in other folders)
