[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/eval",
    "crates/analyze",
    "crates/codegen",
    "crates/interchange",
    "crates/lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
sha2 = "0.10"
time = { version = "0.3", features = ["parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
ureq = { version = "3", features = ["json"] }
lsp-server = "0.7"
lsp-types = "0.97"
