[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/eval",
    "crates/analyze",
    "crates/codegen",
    "crates/interchange",
    "crates/lsp",
    "crates/storage",
]
exclude = [
    "crates/tenor-eval-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
sha2 = "0.10"
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
ureq = { version = "3", features = ["json"] }
lsp-server = "0.7"
lsp-types = "0.97"
rand = "0.8"
