[package]
name = "tenor-cli"
version.workspace = true
edition.workspace = true
description = "Tenor elaborator CLI"

[[bin]]
name = "tenor"
path = "src/main.rs"

[features]
default = []
tls = ["axum-server"]

[dependencies]
tenor-core = { path = "../core" }
tenor-eval = { path = "../eval" }
tenor-analyze = { path = "../analyze" }
tenor-codegen = { path = "../codegen" }
tenor-interchange = { path = "../interchange" }
tenor-lsp = { path = "../lsp" }
axum = { workspace = true }
axum-server = { workspace = true, optional = true }
clap = { workspace = true }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tower-http = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
