[package]
name = "tenor-cli"
version.workspace = true
edition.workspace = true
description = "Tenor elaborator CLI"

[[bin]]
name = "tenor"
path = "src/main.rs"

[features]
default = []
tls = ["axum-server"]

[dependencies]
tenor-core = { path = "../core" }
tenor-eval = { path = "../eval" }
tenor-analyze = { path = "../analyze" }
tenor-codegen = { path = "../codegen" }
tenor-interchange = { path = "../interchange" }
tenor-lsp = { path = "../lsp" }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, optional = true }
clap = { workspace = true }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
flate2 = "1"
tar = "0.4"
tempfile = "3"
tokio = { workspace = true }
tower-http = { workspace = true }
toml = "1"
ureq = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
flate2 = "1"
predicates = "3"
tar = "0.4"
tempfile = "3"
