[package]
name = "tenor-eval"
version.workspace = true
edition.workspace = true
description = "Tenor contract evaluator"

[features]
default = ["adapter"]
adapter = ["tokio", "ureq"]
anthropic = ["ureq", "tokio"]

[dependencies]
async-trait = { workspace = true }
tenor-core = { path = "../core" }
tenor-interchange = { path = "../interchange" }
tenor-storage = { path = "../storage" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
