[package]
name = "tenor-lsp"
version.workspace = true
edition.workspace = true
description = "Tenor Language Server Protocol implementation"

[dependencies]
tenor-core = { path = "../core" }
tenor-analyze = { path = "../analyze" }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
