[package]
name = "tenor-storage"
version = "0.1.0"
edition = "2021"
description = "TenorStorage trait, record types, and error types for Tenor execution backends"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
