[package]
name = "tenor-storage"
version = "0.1.0"
edition = "2021"
description = "TenorStorage trait, record types, and error types for Tenor execution backends"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
