[package]
name = "tenor-eval-wasm"
version = "0.1.0"
edition = "2021"
description = "Tenor contract evaluator compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tenor-eval = { path = "../eval", default-features = false }
tenor-interchange = { path = "../interchange" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
slab = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
