[workspace]

[package]
name = "tenor-python"
version = "0.1.0"
edition = "2021"
description = "Tenor contract evaluator Python bindings via PyO3"

[lib]
name = "tenor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
tenor-eval = { path = "../../crates/eval", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
