[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tenor"
version = "0.1.0"
description = "Tenor contract evaluator for Python"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[tool.maturin]
features = []
python-source = "python"
module-name = "tenor._native"
